--- a/robospice-sample-spring-android/AndroidManifest.xml
+++ b/robospice-sample-spring-android/AndroidManifest.xml
@@ -9,14 +9,15 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <uses-sdk
-        android:minSdkVersion="4"
+        android:minSdkVersion="7"
         android:targetSdkVersion="17" />
 
     <application
-        android:icon="@drawable/ic_launcher_robospice"
         android:allowBackup="false"
-        android:label="@string/app_name" >
-        <activity android:name=".SampleSpiceActivity" >
+        android:icon="@drawable/ic_launcher_robospice"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
