--- a/robospice-sample-spring-android/AndroidManifest.xml
+++ b/robospice-sample-spring-android/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:icon="@drawable/ic_launcher_robospice"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity" android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
