renamed to core-basic sample

--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
 	</ciManagement>
 
 	<modules>
-		<module>robospice-sample-basic</module>
 		<module>robospice-sample-core</module>
+		<module>robospice-sample-core-basic</module>
 		<module>robospice-sample-core-offline</module>
 		<module>robospice-sample-spring-android</module>
 		<module>robospice-sample-google-http-client</module>
