--- a/robospice-sample-core-basic/pom.xml
+++ b/robospice-sample-core-basic/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.octo.android.robospice</groupId>
-	<artifactId>robospice-sample-basic</artifactId>
+	<artifactId>robospice-sample-core-basic</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>apk</packaging>
 	<name>Robospice - Basic usage</name>
