--- a/robospice-sample-google-http-client/pom.xml
+++ b/robospice-sample-google-http-client/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.google.http.client.version>1.3.2-SNAPSHOT</robospice.google.http.client.version>
+		<robospice.google.http.client.version>1.4.0</robospice.google.http.client.version>
 		<google.http.client.version>1.13.1-beta</google.http.client.version>
 		<commons.logging.version>1.1.1</commons.logging.version>
 		<android-maven-plugin.version>3.5.0</android-maven-plugin.version>
