--- a/robospice-sample-ormlite/pom.xml
+++ b/robospice-sample-ormlite/pom.xml
@@ -12,8 +12,8 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.ormlite.version>1.3.2-SNAPSHOT</robospice.ormlite.version>
-		<robospice.spring.android.version>1.3.2-SNAPSHOT</robospice.spring.android.version>
+		<robospice.ormlite.version>1.4.0</robospice.ormlite.version>
+		<robospice.spring.android.version>1.4.0</robospice.spring.android.version>
 		<spring.android.version>1.0.1.RELEASE</spring.android.version>
 		<simplexmlserializer.version>2.6.6</simplexmlserializer.version>
 		<commons.logging.version>1.1.1</commons.logging.version>
