--- a/robospice-sample-spring-android/pom.xml
+++ b/robospice-sample-spring-android/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.spring.android.version>1.3.2-SNAPSHOT</robospice.spring.android.version>
+		<robospice.spring.android.version>1.4.0</robospice.spring.android.version>
 		<spring.android.jackson.version>1.9.11</spring.android.jackson.version>
 		<commons.logging.version>1.1.1</commons.logging.version>
 		<android-maven-plugin.version>3.5.0</android-maven-plugin.version>
