--- a/robospice-sample-ui-spicelist/pom.xml
+++ b/robospice-sample-ui-spicelist/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<android.version>4.1.1.4</android.version>
 		<robospice.spring.android.version>1.3.2-SNAPSHOT</robospice.spring.android.version>
-		<robospice.ui.spicelist.version>1.3.2-SNAPSHOT</robospice.ui.spicelist.version>
+		<robospice.ui.spicelist.version>1.4.0</robospice.ui.spicelist.version>
 		<jackson.version>1.9.9</jackson.version>
 		<commons.logging.version>1.1.1</commons.logging.version>
 		<android-maven-plugin.version>3.5.0</android-maven-plugin.version>
