--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 		<module>robospice-sample-google-http-client</module>
 		<module>robospice-sample-ormlite</module>
 		<module>robospice-sample-ui-spicelist</module>
+        <module>robospice-sample-image-caching</module>
 		<!-- uncomment when retrofit is published on maven <module>robospice-sample-retrofit</module> -->
 	</modules>
 
