--- a/robospice-sample-image-caching/AndroidManifest.xml
+++ b/robospice-sample-image-caching/AndroidManifest.xml
@@ -3,12 +3,15 @@
           package="com.octo.android.robospice.sample"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <uses-sdk android:minSdkVersion="7"/><application android:label="@string/app_name">
+    <uses-sdk
+            android:minSdkVersion="4"
+            android:targetSdkVersion="17"/>
+    <application android:label="@string/app_name">
         <activity android:name=".activity.SampleActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -16,8 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-    <service
-        android:name=".service.FlickrSpiceService"
-        android:exported="false" />
+        <service
+                android:name=".service.FlickrSpiceService"
+                android:exported="false"/>
     </application>
 </manifest>
