--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 	<modules>
 		<module>robospice-sample-core</module>
 		<module>robospice-sample-core-basic</module>
+		<module>robospice-sample-core-fragment</module>
 		<module>robospice-sample-core-offline</module>
 		<module>robospice-sample-spring-android</module>
 		<module>robospice-sample-google-http-client</module>
