Enhance rotation support in fragment sample.

--- a/robospice-sample-core-fragment/AndroidManifest.xml
+++ b/robospice-sample-core-fragment/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
 
         <service
-            android:name="com.octo.android.robospice.UncachedSpiceService"
+            android:name="com.octo.android.robospice.sample.basic.fragment.SampleInMemorySpiceService"
             android:exported="false" />
     </application>
 
