--- a/robospice-sample-retrofit/AndroidManifest.xml
+++ b/robospice-sample-retrofit/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:targetSdkVersion="17" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher_robospice"
         android:label="@string/app_name" >
         <activity android:name=".SampleSpiceActivity" >
