--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 # Local configuration file (sdk path, etc)
 local.properties
 release.properties
+default.properties
+project.properties
 
 # Eclipse project files
 .classpath
