Update motivations and core sample.

--- a/robospice-motivations/project.properties
+++ b/robospice-motivations/project.properties
@@ -12,5 +12,4 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../actionbarsherlock
-android.library.reference.2=../../../../Documents/workspace/ActionBarSherlock-4.2.0/library
+android.library.reference.1=../../../bnp_bd_android/ActionBarSherlock/actionbarsherlock
