--- a/pom.xml
+++ b/pom.xml
@@ -88,9 +88,22 @@
 		<module>robospice-sample-spring-android</module>
 		<module>robospice-sample-google-http-client</module>
 		<module>robospice-sample-ormlite</module>
+		<module>robospice-sample-ormlite-content-provider</module>
 		<module>robospice-sample-ui-spicelist</module>
                 <module>robospice-sample-image-caching</module>
-		<!-- uncomment when retrofit is published on maven <module>robospice-sample-retrofit</module> -->
+                <module>robospice-sample-retrofit</module>
 	</modules>
 
+        <build>
+         <plugins>
+          <plugin>
+           <groupId>org.codehaus.mojo</groupId>
+           <artifactId>versions-maven-plugin</artifactId>
+           <version>2.0</version>
+           <configuration>
+            <allowSnapshots>true</allowSnapshots>
+           </configuration>
+          </plugin>
+         </plugins>
+        </build>
 </project>
