--- a/robospice-sample-ormlite-content-provider/pom.xml
+++ b/robospice-sample-ormlite-content-provider/pom.xml
@@ -5,20 +5,20 @@
 
 	<groupId>com.octo.android.robospice</groupId>
 	<artifactId>robospice-sample-ormlite-content-provider</artifactId>
-	<version>1.0.O-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>apk</packaging>
 	<name>Robospice - Sample ORMLite + SpringAndroid</name>
 	<description>A simple sample that demonstrates how to use the ORMLite module + ORMLite Content Provider and RoboSpice. As it is only a caching extension, we will combine it with SpringAndroid for REST requests.</description>
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.ormlite.content.provider.version>1.4.3-SNAPSHOT</robospice.ormlite.content.provider.version>
-		<robospice.spring.android.version>1.4.2-SNAPSHOT</robospice.spring.android.version>
+		<robospice.ormlite.content.provider.version>1.4.4-SNAPSHOT</robospice.ormlite.content.provider.version>
+		<robospice.spring.android.version>1.4.4-SNAPSHOT</robospice.spring.android.version>
 		<ormlite.content.provider.version>1.0.0-SNAPSHOT</ormlite.content.provider.version>
 		<spring.android.version>1.0.1.RELEASE</spring.android.version>
 		<simplexmlserializer.version>2.6.6</simplexmlserializer.version>
 		<commons.logging.version>1.1.1</commons.logging.version>
-		<android-maven-plugin.version>3.5.0</android-maven-plugin.version>
+		<android-maven-plugin.version>3.6.0</android-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
 		<maven-dependency-plugin.version>2.6</maven-dependency-plugin.version>
@@ -79,7 +79,7 @@
 					<resourceDirectory>${project.basedir}/res</resourceDirectory>
 					<nativeLibrariesDirectory>${project.basedir}/src/main/native</nativeLibrariesDirectory>
 					<sdk>
-						<platform>7</platform>
+						<platform>17</platform>
 					</sdk>
 					<undeployBeforeDeploy>true</undeployBeforeDeploy>
 				</configuration>
