--- a/robospice-sample-ormlite-content-provider/pom.xml
+++ b/robospice-sample-ormlite-content-provider/pom.xml
@@ -12,9 +12,9 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.ormlite.content.provider.version>1.4.5-SNAPSHOT</robospice.ormlite.content.provider.version>
-		<robospice.spring.android.version>1.4.5-SNAPSHOT</robospice.spring.android.version>
-		<ormlite.content.provider.version>1.0.0-SNAPSHOT</ormlite.content.provider.version>
+		<robospice.ormlite.content.provider.version>1.4.6-SNAPSHOT</robospice.ormlite.content.provider.version>
+		<robospice.spring.android.version>1.4.6-SNAPSHOT</robospice.spring.android.version>
+		<ormlite.content.provider.version>1.0.2</ormlite.content.provider.version>
 		<spring.android.version>1.0.1.RELEASE</spring.android.version>
 		<simplexmlserializer.version>2.7</simplexmlserializer.version>
 		<commons.logging.version>1.1.3</commons.logging.version>
