Added pre-set services for Google http client module.

--- a/robospice-sample-google-http-client/AndroidManifest.xml
+++ b/robospice-sample-google-http-client/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <service
-            android:name=".SampleSpiceService"
+            android:name="com.octo.android.robospice.JacksonGoogleHttpClientSpiceService"
             android:exported="false" />
     </application>
 
