--- a/robospice-sample-okhttpclient/pom.xml
+++ b/robospice-sample-okhttpclient/pom.xml
@@ -4,16 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.octo.android.robospice</groupId>
-	<artifactId>robospice-sample-core-basic</artifactId>
+	<artifactId>robospice-sample-okhttp</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>apk</packaging>
-	<name>Robospice - Basic usage</name>
-	<description>A simple sample that demonstrates how to use RoboSpice to perform a simple netowk request</description>
+	<name>Robospice - OkHttp usage</name>
+	<description>A simple sample that demonstrates how to use OkHttp with RoboSpice to perform a simple network request</description>
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
 		<robospice.version>1.4.7-SNAPSHOT</robospice.version>
-		<spring.android.jackson.version>1.9.11</spring.android.jackson.version>
 		<commons.logging.version>1.1.3</commons.logging.version>
 		<android-maven-plugin.version>3.6.0</android-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
@@ -31,7 +30,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.octo.android.robospice</groupId>
-			<artifactId>robospice</artifactId>
+			<artifactId>robospice-okhttp</artifactId>
 			<version>${robospice.version}</version>
 		</dependency>
 	</dependencies>
