--- a/robospice-sample-ui-spicelist/pom.xml
+++ b/robospice-sample-ui-spicelist/pom.xml
@@ -13,7 +13,8 @@
 	<properties>
 		<android.version>4.1.1.4</android.version>
 		<robospice.spring.android.version>1.4.7-SNAPSHOT</robospice.spring.android.version>
-		<robospice.ui.spicelist.version>1.4.6-SNAPSHOT</robospice.ui.spicelist.version>
+		<robospice.ui.spicelist.version>1.4.7-SNAPSHOT</robospice.ui.spicelist.version>
+		<robospice.okhttp.spicelist.version>1.4.7-SNAPSHOT</robospice.okhttp.spicelist.version>
 		<jackson.version>1.9.11</jackson.version>
 		<commons.logging.version>1.1.3</commons.logging.version>
 		<android-maven-plugin.version>3.6.0</android-maven-plugin.version>
@@ -38,6 +39,11 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.octo.android.robospice</groupId>
+			<artifactId>robospice-okhttp</artifactId>
+			<version>${robospice.okhttp.spicelist.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.octo.android.robospice</groupId>
