--- a/robospice-sample-core-monitor/pom.xml
+++ b/robospice-sample-core-monitor/pom.xml
@@ -5,11 +5,11 @@
 
 	<groupId>com.octo.android.robospice</groupId>
 
-	<artifactId>robospice-sample-core</artifactId>
+	<artifactId>robospice-sample-core-monitor</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>apk</packaging>
-	<name>Robospice - Sample Core</name>
-	<description>A simple sample that demonstrates how to use the core module of RoboSpice.</description>
+	<name>Robospice - Sample Core Monitor</name>
+	<description>A simple sample that demonstrates how to use the SpiceService monitoring feature of core module of RoboSpice.</description>
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
