--- a/robospice-sample-ui-spicelist/AndroidManifest.xml
+++ b/robospice-sample-ui-spicelist/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name" >
 
         <!-- LIST OF TWEETS ACTIVITY -->
-        <activity android:name="com.octo.android.robospice.sample.ui.spicelist.activity.TweetListActivity" >
+        <activity android:name="com.octo.android.robospice.sample.ui.spicelist.activity.GitHubListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
