--- a/robospice-sample-okhttpclient/pom.xml
+++ b/robospice-sample-okhttpclient/pom.xml
@@ -12,9 +12,9 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.version>1.4.7-SNAPSHOT</robospice.version>
+		<robospice.version>1.4.9</robospice.version>
 		<commons.logging.version>1.1.3</commons.logging.version>
-		<android-maven-plugin.version>3.6.0</android-maven-plugin.version>
+		<android-maven-plugin.version>3.7.0</android-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
 		<maven-dependency-plugin.version>2.6</maven-dependency-plugin.version>				
