--- a/robospice-sample-retrofit/pom.xml
+++ b/robospice-sample-retrofit/pom.xml
@@ -12,10 +12,10 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.retrofit.version>1.4.7-SNAPSHOT</robospice.retrofit.version>
+		<robospice.retrofit.version>1.4.9</robospice.retrofit.version>
 		<google.http.client.version>1.13.1-beta</google.http.client.version>
 		<commons.logging.version>1.1.3</commons.logging.version>
-		<android-maven-plugin.version>3.6.0</android-maven-plugin.version>
+		<android-maven-plugin.version>3.7.0</android-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
 		<maven-dependency-plugin.version>2.6</maven-dependency-plugin.version>				
