--- a/robospice-sample-ui-spicelist/pom.xml
+++ b/robospice-sample-ui-spicelist/pom.xml
@@ -12,12 +12,12 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.spring.android.version>1.4.7-SNAPSHOT</robospice.spring.android.version>
-		<robospice.ui.spicelist.version>1.4.7-SNAPSHOT</robospice.ui.spicelist.version>
-		<robospice.okhttp.spicelist.version>1.4.7-SNAPSHOT</robospice.okhttp.spicelist.version>
+		<robospice.spring.android.version>1.4.9</robospice.spring.android.version>
+		<robospice.ui.spicelist.version>1.4.9</robospice.ui.spicelist.version>
+		<robospice.okhttp.spicelist.version>1.4.9</robospice.okhttp.spicelist.version>
 		<jackson.version>1.9.11</jackson.version>
 		<commons.logging.version>1.1.3</commons.logging.version>
-		<android-maven-plugin.version>3.6.0</android-maven-plugin.version>
+		<android-maven-plugin.version>3.7.0</android-maven-plugin.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
 		<maven-dependency-plugin.version>2.6</maven-dependency-plugin.version>				
