--- a/robospice-sample-ormlite/pom.xml
+++ b/robospice-sample-ormlite/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.octo.android.robospice</groupId>
 	<artifactId>robospice-sample-ormlite</artifactId>
-	<version>1.0.O-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>apk</packaging>
 	<name>Robospice - Sample ORMLite + SpringAndroid</name>
 	<description>A simple sample that demonstrates how to use the ORMLite module of RoboSpice. As it is only a caching extension, we will combine it with SpringAndroid for REST requests.</description>
