Update all samples

--- a/robospice-sample-ui-spicelist/.gitignore
+++ b/robospice-sample-ui-spicelist/.gitignore
@@ -29,3 +29,15 @@
 /target
 /target
 /target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
