--- a/robospice-sample-ui-spicelist/pom.xml
+++ b/robospice-sample-ui-spicelist/pom.xml
@@ -12,9 +12,7 @@
 
 	<properties>
 		<android.version>4.1.1.4</android.version>
-		<robospice.spring.android.version>1.4.9</robospice.spring.android.version>
-		<robospice.ui.spicelist.version>1.4.9</robospice.ui.spicelist.version>
-		<robospice.okhttp.spicelist.version>1.4.9</robospice.okhttp.spicelist.version>
+		<robospice.version>1.4.10</robospice.version>
 		<jackson.version>1.9.11</jackson.version>
 		<commons.logging.version>1.1.3</commons.logging.version>
 		<android-maven-plugin.version>3.7.0</android-maven-plugin.version>
@@ -33,7 +31,7 @@
 		<dependency>
 			<groupId>com.octo.android.robospice</groupId>
 			<artifactId>robospice-spring-android</artifactId>
-			<version>${robospice.spring.android.version}</version>
+			<version>${robospice.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -43,12 +41,12 @@
 		<dependency>
 			<groupId>com.octo.android.robospice</groupId>
 			<artifactId>robospice-okhttp</artifactId>
-			<version>${robospice.okhttp.spicelist.version}</version>
+			<version>${robospice.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.octo.android.robospice</groupId>
 			<artifactId>robospice-ui-spicelist</artifactId>
-			<version>${robospice.ui.spicelist.version}</version>
+			<version>${robospice.version}</version>
 		</dependency>
 	</dependencies>
 
